# memview

./: .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  license.md  readme.md  vcpkg.json
driver/: CMakeLists.txt  CMakePresets.json  build.cmd  memview.inf  readme.md  sign.ps1
driver/cmake/: FindWDK.cmake
driver/src/: main.cpp
driver/src/ioctl/: dispatch.cpp  dispatch.hpp  ioctl.hpp
driver/src/memory/: memory.cpp  memory.hpp
driver/src/nt/: functions.hpp  structs.hpp
src/: app.rc  main.cpp  version.h.in
src/app/: app.cpp  app.hpp  config.cpp  config.hpp  state.hpp
src/app/window/: render.cpp  render.hpp  window.cpp  window.hpp
src/assets/fonts/basis33/: basis33.hpp
src/assets/fonts/fontawesome6/: fa_brands_400.hpp  fa_solid_900.hpp  license.md
src/memory/: assembler.hpp  memory.hpp  pdb.cpp  pdb.hpp  pe.hpp  pe_symbols.hpp  scan_session.cpp  scan_session.hpp  signature.cpp  signature.hpp  symbol_server.cpp  symbol_server.hpp  symbol_store.cpp  symbol_store.hpp  value_format.cpp  value_format.hpp
src/memory/dissect/: codegen.hpp  def.hpp  guess.hpp  rtti.hpp
src/memory/driver/: driver.cpp  driver.hpp
src/memory/symbols/: pdb.cpp  pdb.hpp  server.cpp  server.hpp  store.cpp  store.hpp
src/ui/: addy_list.cpp  addy_list.hpp  disasm.cpp  hex_view.cpp  memory_view.cpp  memory_view.hpp  process_picker.cpp  process_picker.hpp  regions.cpp  scan_panel.cpp  scan_panel.hpp  struct_dissect.cpp  struct_dissect.hpp  symbols.cpp  toolbar.cpp  toolbar.hpp
